hphp/hack/test/typecheck/strict_switch/union_enums.php.exp
File "union_enums.php", line 30, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `B` (Typing[4019])
  File "union_enums.php", line 5, characters 6-14:
  enum declared here
File "union_enums.php", line 30, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `C` (Typing[4019])
  File "union_enums.php", line 10, characters 6-14:
  enum declared here
File "union_enums.php", line 47, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `C`, `D` (Typing[4019])
  File "union_enums.php", line 10, characters 6-14:
  enum declared here
